2016-03-17  Richard Biener  <rguenther@suse.de>

	PR debug/70271
	* g++.dg/debug/pr70271.C: New testcase.

2016-03-17  Ilya Enkovich  <enkovich.gnu@gmail.com>

	* gcc.target/i386/pr70251.c: New test.

2016-03-17  Marek Polacek  <polacek@redhat.com>

	PR c++/70194
	* g++.dg/warn/constexpr-70194.C: New test.

2016-03-16  Richard Henderson  <rth@redhat.com>

	PR middle-end/70240
	* gcc.c-torture/compile/pr70240.c: New.

2016-03-16  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* gcc.c-torture/compile/20151204.c: Skip for avr.

2016-03-16  Jakub Jelinek  <jakub@redhat.com>

	PR target/70245
	* g++.dg/opt/pr70245.C: New test.
	* g++.dg/opt/pr70245.h: New file.
	* g++.dg/opt/pr70245-aux.cc: New file.

2016-03-16  Martin Sebor  <msebor@redhat.com>

	* g++.dg/cpp1y/constexpr-instantiate.C: Correct DejaGnu directives.

2016-03-16  Richard Henderson  <rth@redhat.com>

	PR middle-end/70199
	* gcc.c-torture/compile/pr70199.c: New.

2016-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/uninit-19.c: Run dos2unix.

2016-03-16  Marek Polacek  <polacek@redhat.com>

	PR c/70093
	* gcc.dg/nested-func-10.c: New test.
	* gcc.dg/nested-func-9.c: New test.

2016-03-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/68714
	* gcc.dg/tree-ssa/pr68714.c: Add -w -Wno-psabi to dg-options.

2016-03-16  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/68715
	* gcc.dg/graphite/pr68715-2.c: New test.
	* gcc.dg/graphite/pr68715.c: New test.
	* gfortran.dg/graphite/pr68715.f90: New test.

2016-03-16  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/68809
	* gcc.dg/graphite/pr68809-2.c: New test.
	* gcc.dg/graphite/pr68809.c: New test.

2016-03-16  Jakub Jelinek  <jakub@redhat.com>

	PR c++/70147
	* g++.dg/ubsan/pr70147-2.C (C::C): Initialize A base with invalid
	method call to i () as argument.  Adjust expected output.

	PR c++/70147
	* g++.dg/ubsan/pr70147-1.C: New test.
	* g++.dg/ubsan/pr70147-2.C: New test.
